# RPI_mini_VMS_client

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: .rtsp_server.h.swp  camera_controller.h  gst_util.h  http_server.h  rtsp_server.h
src/: .rtsp_server.cpp.swp  camera_controller.cpp  gst_util.cpp  http_server.cpp  rtsp_server.cpp
